// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN Detail model (getDetailYears + buildDetailModel) > viewer = __household__ 1`] = `
{
  "model": {
    "rows": [
      {
        "categoryId": "investments",
        "kind": "category-header",
        "label": "Investments",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "account",
        "label": "inv_self",
        "values": [
          null,
          20000,
          25000,
          30000,
        ],
      },
      {
        "kind": "account",
        "label": "inv_joint",
        "values": [
          null,
          8000,
          9000,
          9000,
        ],
      },
      {
        "kind": "account",
        "label": "partner_inv",
        "values": [
          10000,
          10000,
          10000,
          15000,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          10000,
          38000,
          44000,
          54000,
        ],
      },
      {
        "categoryId": "cash",
        "kind": "category-header",
        "label": "Cash",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          null,
          1350,
          1680,
          1680,
        ],
      },
      {
        "categoryId": "real_estate",
        "kind": "category-header",
        "label": "Real Estate",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          null,
          400000,
          400000,
          420000,
        ],
      },
      {
        "categoryId": "real_estate_debt",
        "kind": "category-header",
        "label": "RE Debt",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          null,
          -300000,
          -290000,
          -290000,
        ],
      },
      {
        "kind": "net",
        "label": "Net worth",
        "values": [
          10000,
          139350,
          155680,
          185680,
        ],
      },
    ],
    "years": [
      "2022",
      "2023",
      "2024",
      "2026",
    ],
  },
  "years": [
    "2022",
    "2023",
    "2024",
    "2026",
  ],
}
`;

exports[`GOLDEN Detail model (getDetailYears + buildDetailModel) > viewer = partner 1`] = `
{
  "model": {
    "rows": [
      {
        "categoryId": "investments",
        "kind": "category-header",
        "label": "Investments",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "account",
        "label": "inv_joint",
        "values": [
          null,
          4000,
          4500,
          4500,
        ],
      },
      {
        "kind": "account",
        "label": "partner_inv",
        "values": [
          10000,
          10000,
          10000,
          15000,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          10000,
          14000,
          14500,
          19500,
        ],
      },
      {
        "categoryId": "real_estate",
        "kind": "category-header",
        "label": "Real Estate",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          null,
          200000,
          200000,
          210000,
        ],
      },
      {
        "categoryId": "real_estate_debt",
        "kind": "category-header",
        "label": "RE Debt",
        "values": [
          null,
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          null,
          -150000,
          -145000,
          -145000,
        ],
      },
      {
        "kind": "net",
        "label": "Net worth",
        "values": [
          10000,
          64000,
          69500,
          84500,
        ],
      },
    ],
    "years": [
      "2022",
      "2023",
      "2024",
      "2026",
    ],
  },
  "years": [
    "2022",
    "2023",
    "2024",
    "2026",
  ],
}
`;

exports[`GOLDEN Detail model (getDetailYears + buildDetailModel) > viewer = self 1`] = `
{
  "model": {
    "rows": [
      {
        "categoryId": "investments",
        "kind": "category-header",
        "label": "Investments",
        "values": [
          null,
          null,
          null,
        ],
      },
      {
        "kind": "account",
        "label": "inv_self",
        "values": [
          20000,
          25000,
          30000,
        ],
      },
      {
        "kind": "account",
        "label": "inv_joint",
        "values": [
          4000,
          4500,
          4500,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          24000,
          29500,
          34500,
        ],
      },
      {
        "categoryId": "cash",
        "kind": "category-header",
        "label": "Cash",
        "values": [
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          1350,
          1680,
          1680,
        ],
      },
      {
        "categoryId": "real_estate",
        "kind": "category-header",
        "label": "Real Estate",
        "values": [
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          200000,
          200000,
          210000,
        ],
      },
      {
        "categoryId": "real_estate_debt",
        "kind": "category-header",
        "label": "RE Debt",
        "values": [
          null,
          null,
          null,
        ],
      },
      {
        "kind": "category-total",
        "label": "Total",
        "values": [
          -150000,
          -145000,
          -145000,
        ],
      },
      {
        "kind": "net",
        "label": "Net worth",
        "values": [
          75350,
          86180,
          101180,
        ],
      },
    ],
    "years": [
      "2023",
      "2024",
      "2026",
    ],
  },
  "years": [
    "2023",
    "2024",
    "2026",
  ],
}
`;

exports[`GOLDEN Detail year-over-year cell values > viewer = __household__ 1`] = `
{
  "cash_usd": {
    "2021": null,
    "2022": null,
    "2023": 1350,
    "2024": 1680,
  },
  "house": {
    "2021": null,
    "2022": null,
    "2023": 400000,
    "2024": 400000,
  },
  "inv_joint": {
    "2021": null,
    "2022": null,
    "2023": 8000,
    "2024": 9000,
  },
  "inv_self": {
    "2021": null,
    "2022": null,
    "2023": 20000,
    "2024": 25000,
  },
  "mortgage": {
    "2021": null,
    "2022": null,
    "2023": -300000,
    "2024": -290000,
  },
  "partner_inv": {
    "2021": null,
    "2022": 10000,
    "2023": 10000,
    "2024": 10000,
  },
}
`;

exports[`GOLDEN Detail year-over-year cell values > viewer = self 1`] = `
{
  "cash_usd": {
    "2021": null,
    "2022": null,
    "2023": 1350,
    "2024": 1680,
  },
  "house": {
    "2021": null,
    "2022": null,
    "2023": 200000,
    "2024": 200000,
  },
  "inv_joint": {
    "2021": null,
    "2022": null,
    "2023": 4000,
    "2024": 4500,
  },
  "inv_self": {
    "2021": null,
    "2022": null,
    "2023": 20000,
    "2024": 25000,
  },
  "mortgage": {
    "2021": null,
    "2022": null,
    "2023": -150000,
    "2024": -145000,
  },
}
`;

exports[`GOLDEN buildHistoryCards (History card list) > viewer = __household__ 1`] = `
[
  {
    "debts": -290000,
    "incomplete": true,
    "investments": 54000,
    "latestDate": "2024-06-01",
    "month": "2024-06",
    "net": 185680,
    "olderDates": [],
    "prevNet": 155620,
    "realEstate": 420000,
    "realEstateDebts": -290000,
  },
  {
    "debts": -290000,
    "incomplete": true,
    "investments": 44000,
    "latestDate": "2023-05-10",
    "month": "2023-05",
    "net": 155620,
    "olderDates": [],
    "prevNet": 139300,
    "realEstate": 400000,
    "realEstateDebts": -290000,
  },
  {
    "debts": -300000,
    "incomplete": true,
    "investments": 38000,
    "latestDate": "2022-02-01",
    "month": "2022-02",
    "net": 139300,
    "olderDates": [],
    "prevNet": 10000,
    "realEstate": 400000,
    "realEstateDebts": -300000,
  },
  {
    "debts": 0,
    "incomplete": true,
    "investments": 10000,
    "latestDate": "2021-03-15",
    "month": "2021-03",
    "net": 10000,
    "olderDates": [],
    "prevNet": null,
    "realEstate": 0,
    "realEstateDebts": 0,
  },
]
`;

exports[`GOLDEN buildHistoryCards (History card list) > viewer = partner 1`] = `
[
  {
    "debts": -145000,
    "incomplete": true,
    "investments": 19500,
    "latestDate": "2024-06-01",
    "month": "2024-06",
    "net": 84500,
    "olderDates": [],
    "prevNet": 69500,
    "realEstate": 210000,
    "realEstateDebts": -145000,
  },
  {
    "debts": -145000,
    "incomplete": true,
    "investments": 14500,
    "latestDate": "2023-05-10",
    "month": "2023-05",
    "net": 69500,
    "olderDates": [],
    "prevNet": 64000,
    "realEstate": 200000,
    "realEstateDebts": -145000,
  },
  {
    "debts": -150000,
    "incomplete": true,
    "investments": 14000,
    "latestDate": "2022-02-01",
    "month": "2022-02",
    "net": 64000,
    "olderDates": [],
    "prevNet": 10000,
    "realEstate": 200000,
    "realEstateDebts": -150000,
  },
  {
    "debts": 0,
    "incomplete": true,
    "investments": 10000,
    "latestDate": "2021-03-15",
    "month": "2021-03",
    "net": 10000,
    "olderDates": [],
    "prevNet": null,
    "realEstate": 0,
    "realEstateDebts": 0,
  },
]
`;

exports[`GOLDEN buildHistoryCards (History card list) > viewer = self 1`] = `
[
  {
    "debts": -145000,
    "incomplete": true,
    "investments": 34500,
    "latestDate": "2024-06-01",
    "month": "2024-06",
    "net": 101180,
    "olderDates": [],
    "prevNet": 86120,
    "realEstate": 210000,
    "realEstateDebts": -145000,
  },
  {
    "debts": -145000,
    "incomplete": true,
    "investments": 29500,
    "latestDate": "2023-05-10",
    "month": "2023-05",
    "net": 86120,
    "olderDates": [],
    "prevNet": 75300,
    "realEstate": 200000,
    "realEstateDebts": -145000,
  },
  {
    "debts": -150000,
    "incomplete": true,
    "investments": 24000,
    "latestDate": "2022-02-01",
    "month": "2022-02",
    "net": 75300,
    "olderDates": [],
    "prevNet": 0,
    "realEstate": 200000,
    "realEstateDebts": -150000,
  },
  {
    "debts": 0,
    "incomplete": true,
    "investments": 0,
    "latestDate": "2021-03-15",
    "month": "2021-03",
    "net": 0,
    "olderDates": [],
    "prevNet": null,
    "realEstate": 0,
    "realEstateDebts": 0,
  },
]
`;

exports[`GOLDEN computeDateStats (net worth + byCategory at latest date) > viewer = __household__ 1`] = `
{
  "byCategory": {
    "cash": 1680,
    "equity": 6352.5,
    "investments": 54000,
    "real_estate": 420000,
    "real_estate_debt": -290000,
  },
  "netWorth": 192032.5,
}
`;

exports[`GOLDEN computeDateStats (net worth + byCategory at latest date) > viewer = partner 1`] = `
{
  "byCategory": {
    "cash": 0,
    "investments": 19500,
    "real_estate": 210000,
    "real_estate_debt": -145000,
  },
  "netWorth": 84500,
}
`;

exports[`GOLDEN computeDateStats (net worth + byCategory at latest date) > viewer = self 1`] = `
{
  "byCategory": {
    "cash": 1680,
    "equity": 6352.5,
    "investments": 34500,
    "real_estate": 210000,
    "real_estate_debt": -145000,
  },
  "netWorth": 107532.5,
}
`;

exports[`GOLDEN computeSeries (History chart) > viewer = __household__ 1`] = `
{
  "dates": [
    "2021-03-15",
    "2022-02-01",
    "2023-05-10",
    "2024-06-01",
  ],
  "investments": [
    10000,
    38000,
    44000,
    54000,
  ],
  "other": [
    null,
    1300,
    1620,
    1680,
  ],
  "realEstateNet": [
    null,
    100000,
    110000,
    130000,
  ],
}
`;

exports[`GOLDEN computeSeries (History chart) > viewer = partner 1`] = `
{
  "dates": [
    "2021-03-15",
    "2022-02-01",
    "2023-05-10",
    "2024-06-01",
  ],
  "investments": [
    10000,
    14000,
    14500,
    19500,
  ],
  "other": [
    0,
    0,
    0,
    0,
  ],
  "realEstateNet": [
    null,
    50000,
    55000,
    65000,
  ],
}
`;

exports[`GOLDEN computeSeries (History chart) > viewer = self 1`] = `
{
  "dates": [
    "2022-02-01",
    "2023-05-10",
    "2024-06-01",
  ],
  "investments": [
    24000,
    29500,
    34500,
  ],
  "other": [
    1300,
    1620,
    1680,
  ],
  "realEstateNet": [
    50000,
    55000,
    65000,
  ],
}
`;
